--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "bootstrap": "^4.3.1",
     "fullpage.js": "^3.0.7",
     "jquery": "^3.4.1",
+    "jquery-touchswipe": "^1.6.19",
     "pagepiling.js": "^1.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
